everything working before deleting unnecesarry files